# bader2ml

./: LICENSE  README.md  pyproject.toml
src/bader2ml/: cli.py
src/bader2ml/bader/: runner.py
src/bader2ml/cp2k/: prepare_cp2k_no_split.py
src/bader2ml/data/: acf_to_exyz.py  exyz_to_db.py  prepare_dataset.py
src/bader2ml/predict/: predict_charges.py
src/bader2ml/train/: train_schnet.py
