[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bader2ml"
version = "0.1.0"
description = "A modular pipeline to train machine-learned atomic charges from CP2K+Bader using SchNet"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "Vikas Tiwari" }]

dependencies = []

[project.scripts]
bader2ml = "bader2ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bader2ml*"]

[tool.setuptools.package-data]
bader2ml = ["bin/bader"]
